--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ nav {
     width: 100%;
     z-index: 1000;
 }
+
+nav a:hover {
+    border-bottom: 2px solid #262626;
+}
 nav .container {
     display: flex;
     justify-content: space-between;
@@ -77,7 +81,7 @@ nav ul li a {
     height: 100vh;
     display: flex;
     align-items: center;
-    background: lightgrey;
+    background: #cfeac7;
     text-align: center;
     padding-top: 10px;
 }
