--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav ul li a {
 .about-content {
     display: flex;
     gap: 3.125rem;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     margin-top: 4rem;
 }
@@ -285,9 +285,9 @@ footer p {
 }
 
 /* Responsive Design Code */
-@media (max-width: 850px) {
+@media (min-width: 768px) {
     .about-content {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .hero h1 {
